force-app/main/default/objects/sked_Operation_Record_Staff__c/sked_Operation_Record_Staff__c.object-meta.xml
<CustomObject>
    <label>Operation Record Staff</label>
    <nameField>
        <displayFormat>ORS-{000000}</displayFormat>
        <label>Operation Staff Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation Record Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>