force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/Scheduled_Shift_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Shift_End_Date__c</fullName>
    <description>This field is created as part of HRP-12929</description>
    <label>Scheduled Shift End Date</label>
    <type>Date</type>
</CustomField>