force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/Scheduled_Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Shift_End_Time__c</fullName>
    <description>This field is created as part of HRP-12929</description>
    <label>Scheduled Shift End Time</label>
    <type>Time</type>
</CustomField>