force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/Scheduled_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Shift_Start__c</fullName>
    <description>Added this field as part of HRP-12929</description>
    <label>Scheduled Shift Start</label>
    <type>DateTime</type>
</CustomField>