force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Absent__c.field-meta.xml
<CustomField>
    <fullName>sked_Absent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Absent</label>
    <type>Checkbox</type>
</CustomField>