force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Actual_Roles__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Roles__c</fullName>
    <label>Actual Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Resource_Roles</valueSetName>
    </valueSet>
</CustomField>