force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Actual_Shift_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Shift_End_Date__c</fullName>
    <label>Actual Shift End Date</label>
    <type>Date</type>
</CustomField>