force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Actual_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Shift_Start__c</fullName>
    <label>Actual Shift Start</label>
    <type>DateTime</type>
</CustomField>