force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Added_Staff__c.field-meta.xml
<CustomField>
    <fullName>sked_Added_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added Staff</label>
    <type>Checkbox</type>
</CustomField>