force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Early_Departure_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Early_Departure_Date_Received__c</fullName>
    <label>Early Departure Date Received</label>
    <type>Date</type>
</CustomField>