force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Early_Departure_DateTime_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Early_Departure_DateTime_Received__c</fullName>
    <label>Early Departure DateTime Received</label>
    <type>DateTime</type>
</CustomField>