force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Early_Departure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>sked_Early_Departure_Reasons__c</fullName>
    <label>Early Departure Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Turnaround Time</fullName>
            </value>
            <value>
                <fullName>Not Early</fullName>
            </value>
            <value>
                <fullName>Management Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>