force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Early_Departure_Time_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Early_Departure_Time_Received__c</fullName>
    <label>Early Departure Time Received</label>
    <type>Time</type>
</CustomField>