force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_EarlyDeparture_LateArrival_Reasons__c.field-meta.xml
<CustomField>
    <fullName>sked_EarlyDeparture_LateArrival_Reasons__c</fullName>
    <label>Early Departure / Late Arrival Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turnaround Time</fullName>
            </value>
            <value>
                <fullName>Not Late/Early</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Reason 1</fullName>
                <isActive>false</isActive>
                <label>Reason 1</label>
            </value>
            <value>
                <fullName>Reason 2</fullName>
                <isActive>false</isActive>
                <label>Reason 2</label>
            </value>
            <value>
                <fullName>Reason 3</fullName>
                <isActive>false</isActive>
                <label>Reason 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>