force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Job_Allocation__c.field-meta.xml
<CustomField>
    <fullName>sked_Job_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Allocation</label>
    <referenceTo>sked__Job_Allocation__c</referenceTo>
    <relationshipLabel>Operation Record Staff</relationshipLabel>
    <relationshipName>sked_Operation_Record_Staff</relationshipName>
    <type>Lookup</type>
</CustomField>