force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Late_Arrival_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Late_Arrival_Date_Received__c</fullName>
    <label>Late Arrival Date Received</label>
    <type>Date</type>
</CustomField>