force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Late_Arrival_DateTime_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Late_Arrival_DateTime_Received__c</fullName>
    <label>DateTime Late Arrival Received</label>
    <type>DateTime</type>
</CustomField>