force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Late_Arrival_Reasons__c.field-meta.xml
<CustomField>
    <fullName>sked_Late_Arrival_Reasons__c</fullName>
    <label>Late Arrival Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turnaround Time</fullName>
            </value>
            <value>
                <fullName>Not Late</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>