force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Late_Arrival_Time_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Late_Arrival_Time_Received__c</fullName>
    <label>Time Late Arrival Received</label>
    <type>Time</type>
</CustomField>