force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Meals_Break_Not_Taken__c.field-meta.xml
<CustomField>
    <fullName>sked_Meals_Break_Not_Taken__c</fullName>
    <description>Number of Meals Break that are not Taken</description>
    <formula>IF(sked_Number_of_Meal_Breaks_Taken__c &gt; sked_Meal_Breaks_Earned__c,
   0,
   sked_Meal_Breaks_Earned__c-sked_Number_of_Meal_Breaks_Taken__c
  )</formula>
    <label>Meals Break Not Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>