force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_No_Meal__c.field-meta.xml
<CustomField>
    <fullName>sked_No_Meal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if meal break was scheduled &quot;in-drive&quot; but not taken by staff</inlineHelpText>
    <label>No Meal</label>
    <type>Checkbox</type>
</CustomField>