force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Operation_Record__c.field-meta.xml
<CustomField>
    <fullName>sked_Operation_Record__c</fullName>
    <label>Operation Record</label>
    <referenceTo>sked_Operation_Record__c</referenceTo>
    <relationshipLabel>Operation Record Staff</relationshipLabel>
    <relationshipName>sked_Operation_Record_Staff</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>