force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Pool__c.field-meta.xml
<CustomField>
    <fullName>sked_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>