force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Premiums_Op_Pay__c.field-meta.xml
<CustomField>
    <fullName>sked_Premiums_Op_Pay__c</fullName>
    <label>Premiums/Op Pay</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2RBC</fullName>
            </value>
            <value>
                <fullName>Charge</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>OJI</fullName>
            </value>
            <value>
                <fullName>Translator</fullName>
            </value>
            <value>
                <fullName>Late End</fullName>
            </value>
            <value>
                <fullName>2RBC Sign-off</fullName>
                <isActive>false</isActive>
                <label>2RBC Sign-off</label>
            </value>
            <value>
                <fullName>Apheresis Charge</fullName>
                <isActive>false</isActive>
                <label>Apheresis Charge</label>
            </value>
            <value>
                <fullName>Charge - 2RBC</fullName>
                <isActive>false</isActive>
                <label>Charge - 2RBC</label>
            </value>
            <value>
                <fullName>Charge - Special Collections</fullName>
                <isActive>false</isActive>
                <label>Charge - Special Collections</label>
            </value>
            <value>
                <fullName>Charge Mentor</fullName>
                <isActive>false</isActive>
                <label>Charge Mentor</label>
            </value>
            <value>
                <fullName>Competent Driver</fullName>
                <isActive>false</isActive>
                <label>Competent Driver</label>
            </value>
            <value>
                <fullName>DRC</fullName>
                <isActive>false</isActive>
                <label>DRC</label>
            </value>
            <value>
                <fullName>Drive Lead</fullName>
                <isActive>false</isActive>
                <label>Drive Lead</label>
            </value>
            <value>
                <fullName>Driver - DOT</fullName>
                <isActive>false</isActive>
                <label>Driver - DOT</label>
            </value>
            <value>
                <fullName>Driver CDL A</fullName>
                <isActive>false</isActive>
                <label>Driver CDL A</label>
            </value>
            <value>
                <fullName>Driver CDL B</fullName>
                <isActive>false</isActive>
                <label>Driver CDL B</label>
            </value>
            <value>
                <fullName>Licensed Nurse</fullName>
                <isActive>false</isActive>
                <label>Licensed Nurse</label>
            </value>
            <value>
                <fullName>On Call Stand by (Daily)</fullName>
                <isActive>false</isActive>
                <label>On Call Stand by (Daily)</label>
            </value>
            <value>
                <fullName>Special Collections Charge</fullName>
                <isActive>false</isActive>
                <label>Special Collections Charge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>