force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Role__c.field-meta.xml
<CustomField>
    <fullName>sked_Role__c</fullName>
    <formula>sked_Job_Allocation__r.sked_Roles_Assignment_Str__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>