force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Scheduled_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Scheduled_Shift_Start__c</fullName>
    <formula>sked_Job_Allocation__r.sked__Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Shift Start (Deprecated)</label>
    <type>DateTime</type>
</CustomField>