force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Time_Already_Existed_In_Workday__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Already_Existed_In_Workday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Employee Report API indicated the employee already had time in Workday for this drive date (base time was not submitted).</description>
    <label>Time Already Existed In Workday</label>
    <type>Checkbox</type>
</CustomField>