force-app/main/default/objects/sked_Operation_Record_Staff__c/fields/sked_Workday_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Submission_Status__c</fullName>
    <description>Per-staff Workday submission status. Retries only select staff with Failed and attempt count below max.</description>
    <label>Workday Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>