force-app/main/default/objects/sked_Operation_Record_Staff__c/validationRules/RequiresEarlyDepartureReasons.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiresEarlyDepartureReasons</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(sked_Early_Departure_Reasons__c , &#39;&#39;) ,
(sked_Actual_Shift_End__c &lt; Scheduled_Shift_End__c)
)</errorConditionFormula>
    <errorMessage>Early Departure Reason is required.</errorMessage>
</ValidationRule>